--- a/theme/css/materialize.css
+++ b/theme/css/materialize.css
@@ -4010,7 +4010,7 @@ input[type=range] + .thumb {
 
 nav {
   color: #fff;
-  background-color: #115f93;
+  background-color: #002147;
   width: 100%;
   height: 56px;
   line-height: 56px;
